# tinyexpr

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt
docs/: WALKTHROUGH.md
include/spice_expr/: spice_expr.h
include/spice_expr/analysis/: dependency_graph.h  dependency_printer.h  evaluation_order.h
include/spice_expr/array/: array_value.h  xtensor.h  xtensor_impl.h
include/spice_expr/ast/: arena.h  expr_node.h  expression_builder.h  functions.h  literals.h  operations.h  references.h
include/spice_expr/circuit/: circuit_interface.h
include/spice_expr/engine/: expression_engine.h
include/spice_expr/function/: function_registry.h  user_function.h
include/spice_expr/parser/: lexer.h  parser.h
include/spice_expr/symbol/: symbol_table.h
include/spice_expr/visitor/: array_evaluator.h  dependency_extractor.h  differentiator.h  evaluator.h  printer.h  simplifier.h  tensor_evaluator.h  visitor.h
src/: arena.cc  array_evaluator.cc  array_value.cc  circuit_interface.cc  dependency_extractor.cc  dependency_graph.cc  dependency_printer.cc  differentiator.cc  evaluation_order.cc  evaluator.cc  expr_node.cc  expression_builder.cc  expression_engine.cc  function_registry.cc  functions.cc  lexer.cc  literals.cc  operations.cc  parser.cc  printer.cc  references.cc  simplifier.cc  symbol_table.cc  tensor_evaluator.cc  user_function.cc  xtensor.cc
tests/: ads_gummel_poon_tests.cc  advanced_evaluation_tests.cc  array_evaluator_tests.cc  array_tests.cc  ast_tests.cc  benchmark_tests.cc  compact_model_tests.cc  dependency_printer_tests.cc  dependency_tests.cc  differentiator_tests.cc  evaluator_tests.cc  expression_builder_tests.cc  expression_corpus_tests.cc  exprtk_corpus_tests.cc  exprtk_ext_tests_part1.cc  exprtk_functional_tests.cc  function_tests.cc  integration_tests.cc  parser_tests.cc  simplifier_tests.cc  stress_tests.cc  symbol_table_tests.cc  tensor_evaluator_tests.cc  xtensor_tests.cc
tools/: migrate_exprtk_tests.py
